Fix spacing within product card

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,3 @@
 .card-content {
-  height: 21vh;
+  height: 15rem;
 }
